# NestorApp

./: .a11y-coverage-baseline.json  .bundle-size-baseline.json  .coverage-baseline.json  .deadcode-baseline.json  .depcruise-boundaries-baseline.json  .depcruise-cycles-baseline.json  .dependency-cruiser.cjs  .dxf-timing-baseline.json  .dxf-tsc-baseline.json  .entity-audit-coverage-baseline.json  .env.example  .eslint-complexity-baseline.json  .eslint-jsx-a11y-baseline.json  .eslint-security-baseline.json  .eslintrc.js  .eslintrc.semantic.js  .firestore-companyid-baseline.json  .gitignore  .gitleaks.toml  .i18n-missing-keys-baseline.json  .i18n-resolver-reachability-baseline.json  .i18n-ui-strings-baseline.json  .i18n-violations-baseline.json  .icu-violations-baseline.json  .jscpd-baseline.json  .jscpdrc.json  .knip-deps-baseline.json  .license-allowlist.json  .mcp.json  .native-tooltip-baseline.json  .no-flash-baseline.json  .notification-keys-baseline.json  .npmrc  .option-i18n-keys-baseline.json  .pnpm-audit-baseline.json  .ssot-discover-baseline.json  .ssot-registry.json  .ssot-violations-baseline.json  .tabs-import-baseline.json  .tailwind-palette-baseline.json  (+248 more)
.claude/: settings.local.json
.claude-rules/: MEMORY.md  README.md  adr-328-handoff-after-phase-0.md  adr-328-handoff-after-phase-1.md  adr-328-handoff-after-phase-10.md  adr-328-handoff-after-phase-11.md  adr-328-handoff-after-phase-2.md  adr-328-handoff-after-phase-3.md  adr-328-handoff-after-phase-4.md  adr-328-handoff-after-phase-5.md  adr-328-handoff-after-phase-6.md  adr-328-handoff-after-phase-7.md  adr-328-handoff-after-phase-8.md  adr-328-handoff-after-phase-9.md  boy-scout-centralization.md  commit-workflow.md  feedback_adr_driven_workflow.md  feedback_adr_phase3_mandatory.md  feedback_ai_pipeline_mandatory_testing.md  feedback_disable_slow_precommit.md  feedback_file_size_extract_not_trim.md  feedback_google_quality_standard.md  feedback_never_ask_commit_push.md  feedback_no_hardcoded_i18n_defaultvalue.md  feedback_no_push_vercel.md  feedback_no_push_without_order.md  feedback_no_vercel_deploy_limit.md  feedback_only_commit_no_push.md  feedback_single_tsc_at_a_time.md  handoff-adr340-phase9-after-step-g.md  handoff-adr340-phase9-after-step-i.md  handoff-adr340-phase9-after-step-k.md  handoff-adr369.md  handoff-dxf-settings-clone-centralization.md  handoff-property-showcase.md  pending-adr344-dimension-leader.md  pending-firestore-orphan-indexes.md  pending-notification-migration.md  pending-ratchet-work.md  project_accounting_pending_tasks.md  (+3 more)
.pseudo-proof/: consistent.json  mismatch.json  missing.json  stale.json
.tbl-lib/: dims.js  download.js
BACKUP_obligations_before_restore_20251219_184243/: ObligationForm.tsx  components.ts  config.ts  index.ts  live-preview.tsx  pdf-export-button.tsx  table-of-contents.tsx
FORMS_DUPLICATES_BACKUP_20251227/: IndividualFormTabRenderer.tsx.backup  ServiceFormRenderer.tsx.backup  company-config.ts.backup  individual-config.ts.backup  service-config.ts.backup
HANDOFFS/: 2026-05-31-ADR-402-phaseB-resize-handoff.md  2026-05-31_ADR-396_Phase6b_handoff.md  2026-05-31_ADR-401_PhaseC_handoff.md  2026-05-31_ADR-401_PhaseE-beta_tilted-beam_handoff.md  2026-05-31_ADR-401_PhaseE-rest_slope-input-grip-edit-break_handoff.md  2026-05-31_ADR-401_PhaseE2-E4-F_after-E3-grip_handoff.md  2026-05-31_ADR-401_PhaseE2-followup-a_tilted-slab-render_handoff.md  2026-05-31_ADR-401_PhaseE2_handoff.md  2026-05-31_ADR-401_PhaseE_manual-attach-ribbon-grip_handoff.md  2026-05-31_ADR-401_PhaseF-column-mirror_after-E-complete_handoff.md  2026-05-31_ADR-401_PhaseF2-column-consumers_after-F1-core_handoff.md  2026-05-31_ADR-401_PhaseGamma1_base-attach-engine_handoff.md  2026-05-31_ADR-401_PhaseGamma2_base-attach-consumers_handoff.md  2026-06-01-ADR-401-402-404-attached-element-vanish-gizmo-handoff.md  2026-06-01-ADR-402-3d-rotation-all-axes-handoff.md  2026-06-01-ADR-402-live-move-preview-handoff.md  (+702 more)
UNITS/: README.md  (+1 more)
services/dxf-export/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
services/dxf-export/src/: __init__.py  main.py
services/dxf-export/src/api/: __init__.py  export.py  health.py
services/dxf-export/src/config/: __init__.py  settings.py
services/dxf-export/src/models/: __init__.py  export_models.py
services/dxf-export/src/services/: __init__.py  dxf_export_service.py
services/dxf-export/tests/: __init__.py  conftest.py  test_export.py  test_health.py
(+17675 files in other folders)
